--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
   },
   "_homepage": "",
   "dependencies": {
+    "chalk": "^2.3.0",
     "discord.js": "^11.3.2",
-    "enmap": "^0.6.2",
-    "enmap-level": "^1.0.1",
+    "enmap": "^2.0.4",
+    "enmap-level": "^2.0.2",
     "erlpack": "github:discordapp/erlpack",
     "ffmpeg-binaries": "^3.2.2",
     "libsodium-wrappers": "^0.7.3",
