--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
   "_homepage": "",
   "dependencies": {
     "chalk": "^2.3.0",
-    "discord.js": "^11.3.2",
+    "discord.js": "11.3.2",
     "enmap": "^2.0.4",
     "enmap-level": "^2.0.2",
     "erlpack": "github:discordapp/erlpack",
-    "ffmpeg-binaries": "^3.2.2",
+    "ffmpeg-binaries": "^3.2.2-3",
     "libsodium-wrappers": "^0.7.3",
     "moment": "^2.21.0",
     "moment-duration-format": "^2.2.2",
