Added 'fs-extra' as a dependency

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "enmap-level": "^2.0.2",
     "erlpack": "github:discordapp/erlpack",
     "ffmpeg-binaries": "^3.2.2-3",
+    "fs-extra": "^7.0.0",
     "libsodium-wrappers": "^0.7.3",
     "moment": "^2.21.0",
     "moment-duration-format": "^2.2.2",
