--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "opusscript": "0.0.6",
     "pm2": "^2.10.1",
     "prism-media": "^0.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5",
     "sqlite3": "^4.0.2",
     "uws": "^9.14.0",
     "ytdl-core": "^0.20.2"
