--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   },
   "_homepage": "",
   "dependencies": {
+    "better-sqlite-pool": "^0.1.2",
     "chalk": "^2.3.0",
     "cyclic-32": "^1.0.1",
-    "discord.js": "11.3.2",
-    "enmap": "^4.2.1",
+    "discord.js": "^11.4.2",
+    "enmap": "^4.3.3",
     "erlpack": "github:discordapp/erlpack",
     "ffmpeg-binaries": "^3.2.2-3",
     "fs-extra": "^7.0.0",
@@ -37,11 +38,12 @@
     "moment-duration-format": "^2.2.2",
     "node-opus": "^0.2.7",
     "node-schedule": "^1.3.0",
-    "opusscript": "0.0.6",
+    "opusscript": "0.0.4",
     "pm2": "^2.10.1",
-    "prism-media": "^0.2.0",
+    "prism-media": "^0.2.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
+    "socket.io": "^2.2.0",
     "sqlite3": "^4.0.2",
     "uws": "^9.14.0",
     "ytdl-core": "^0.20.2"
