--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,10 +28,7 @@
         "ObjectExpression": 1
       }
     ],
-    "linebreak-style": [
-      "warn",
-      "windows"
-    ],
+    "linebreak-style": "off",
     "quotes": [
       "warn",
       "single",
