--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chalk": "^2.3.0",
     "cheerio-httpcli": "^0.7.3",
     "cyclic-32": "^1.0.1",
+    "decimal.js-light": "^2.5.0",
     "discord.js": "^11.4.2",
     "enmap": "^4.3.3",
     "erlpack": "github:discordapp/erlpack",
