--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ytdl-core": "^1.0.7"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-node": "^11.0.0"
