--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
     "opusscript": "0.0.7",
-    "pm2": "^4.2.3",
     "prism-media": "^1.2.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
@@ -53,5 +52,8 @@
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-node": "^11.0.0"
+  },
+  "optionalDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
