--- a/package.json
+++ b/package.json
@@ -25,31 +25,29 @@
   },
   "_homepage": "",
   "dependencies": {
-    "better-sqlite-pool": "^0.2.3",
-    "chalk": "^3.0.0",
+    "@discordjs/opus": "^0.3.2",
+    "better-sqlite-pool": "^0.3.0",
+    "chalk": "^4.0.0",
     "decimal.js-light": "^2.5.0",
-    "discord.js": "^11.5.1",
+    "discord.js": "^12.2.0",
     "enmap": "^5.2.4",
-    "erlpack": "github:discordapp/erlpack",
-    "fs-extra": "^8.1.0",
-    "libsodium-wrappers": "^0.7.6",
-    "moment": "^2.24.0",
+    "ffmpeg-static": "^4.2.2",
+    "fs-extra": "^9.0.0",
+    "moment": "^2.26.0",
     "moment-duration-format": "^2.3.2",
-    "node-opus": "^0.3.3",
     "node-schedule": "^1.3.2",
-    "opusscript": "0.0.7",
-    "prism-media": "^1.2.0",
     "request": "^2.88.2",
     "request-promise-native": "^1.0.8",
     "socket.io": "^2.3.0",
-    "sqlite3": "^4.1.1",
-    "ytdl-core": "^1.0.7"
+    "sodium": "^3.0.2",
+    "sqlite3": "^4.2.0",
+    "ytdl-core": "^2.1.5"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.8.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.1.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-node": "^11.0.0"
+    "eslint-plugin-node": "^11.1.0"
   },
   "optionalDependencies": {
     "dotenv": "^8.2.0"
